--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "react-hello-world",
-  "homepage": "http://SumithBaddam.github.io/Recipe_givem_food_image",
   "version": "1.0.0",
   "description": "React Hello World",
   "main": "index.js",
@@ -10,14 +9,16 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "(npm run server) & npm run start",
+    "deploy": "(npm run server) & npm run start",
+    "dev": "(npm run server) & npm run start"
   },
   "author": "CodeMix",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
+    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
