--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "predeploy": "(npm run server) & npm run start",
-    "deploy": "(npm run server) & npm run start",
+    "predeploy": "npm run build",
+    "deploy": "npm run start",
     "dev": "(npm run server) & npm run start"
   },
   "author": "CodeMix",
