--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "server": "node server.js",
     "predeploy": "npm run build",
     "deploy": "npm run start",
-    "dev": "(npm run server) & npm run start"
+    "dev": "npm run server; npm run start",
+    "deve": "concurrently --kill-others \"npm run server\" \"npm run start\""
   },
   "author": "CodeMix",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
-    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
@@ -28,6 +28,7 @@
     "react-scripts": "^1.1.1"
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "gh-pages": "^2.2.0"
   }
 }
