--- a/package.json
+++ b/package.json
@@ -6,13 +6,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "server": "node server.js",
-    "predeploy": "npm run build",
-    "deploy": "npm run start",
-    "dev": "npm run server; npm run start",
-    "deve": "concurrently --kill-others \"npm run server\" \"npm run start\""
+    "deploy": "concurrently \"npm run server\" \"npm run start\""
   },
   "author": "CodeMix",
   "license": "ISC",
