--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Hello World",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run server\" \"npm run start\"",
     "build": "react-scripts build",
     "server": "node server.js",
     "deploy": "concurrently \"npm run server\" \"npm run start\""
